[tool.poetry]
name = "search-trends"
version = "0.1.0"
description = "Package for FinMango search trends analytics"
authors = ["ramosaj1 <anthonyjoeramos@gmail.com>"]
readme = "README.md"
packages = [{include = "search_trends"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
google-api-python-client = "^2.136.0"
matplotlib = "^3.9.1"
pytest = "^8.2.2"
click = "^8.1.7"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
